--- a/index-2.html
+++ b/index-2.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Temperature Safety App</title>
-  <meta name="description" content="Converts °C to °F and drives LEDs/messages against a setpoint with start/stop control." />
+  <meta name="description" content="Convert °C→°F and compare to a setpoint with LEDs and RUN/STOP." />
   <style>
     :root{--bg:#0b1220;--panel:#0f172a;--text:#e5e7eb;--muted:#94a3b8;--accent:#22c55e;--border:#1f2937;}
     @media (prefers-color-scheme: light){:root{--bg:#f6f7fb;--panel:#ffffff;--text:#0f172a;--muted:#475569;--accent:#059669;--border:#e5e7eb}}
@@ -12,18 +12,20 @@
     html,body{height:100%}
     body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;background:var(--bg);color:var(--text)}
     .wrap{max-width:1000px;margin:32px auto;padding:24px}
-    .grid{display:grid;gap:16px;grid-template-columns:300px 1fr}
-    .card{background:var(--panel);border:1px solid var(--border);border-radius:16px;padding:18px}
     h1{margin:0 0 6px;font-size:26px}
     .muted{color:var(--muted);font-size:14px;margin:0 0 14px}
+    .grid{display:grid;gap:16px;grid-template-columns:300px 1fr}
+    .card{background:var(--panel);border:1px solid var(--border);border-radius:16px;padding:18px}
+    .title{font-weight:700}
     .row{display:flex;gap:10px;align-items:center;flex-wrap:wrap}
     .btn{border:1px solid var(--border);background:#11182710;color:var(--text);padding:10px 14px;border-radius:12px;cursor:pointer}
     .btn.primary{background:var(--accent);border-color:var(--accent);color:#fff}
     .btn.danger{background:#ef4444;border-color:#ef4444;color:#fff}
     .vstack{display:flex;flex-direction:column;gap:8px}
-    .title{font-weight:700}
+    /* vertical slider */
     .vslider{height:260px;writing-mode: bt-lr;-webkit-appearance: slider-vertical;appearance: slider-vertical;width:40px}
     .digit{font:700 18px ui-monospace, SFMono-Regular, Menlo, monospace}
+    /* thermometer */
     .thermo{position:relative;height:300px;width:80px;border:1px solid var(--border);border-radius:14px;background:linear-gradient(#0ea5e933,#ef444433);display:flex;align-items:flex-end;justify-content:center;margin:auto}
     .mercury{width:60px;border-radius:10px;background:#60a5fa}
     .scale{position:absolute;left:100%;top:0;height:100%;padding-left:10px;color:var(--muted);font-size:12px;display:flex;flex-direction:column;justify-content:space-between}
@@ -40,119 +42,4 @@
 <body>
   <div class="wrap">
     <h1>Temperature Safety App</h1>
-    <p class="muted">Convert <strong>°C → °F</strong>. If <code>°F &gt; Setpoint</code> → <strong>RED LED</strong> &amp; message “Please turn OFF the system”. Else <strong>GREEN LED</strong> &amp; “System is safe”. Toggle <em>Run</em> to loop continuously; use <em>Safety Stop</em> to halt.</p>
-
-    <div class="grid">
-      <section class="card vstack">
-        <div class="title">Inputs</div>
-        <label class="label">Temperature input (°C) — vertical slide with digital display</label>
-        <div class="row" style="gap:16px;align-items:flex-end">
-          <input id="cSlider" type="range" min="0" max="100" value="25" class="vslider" />
-          <div>
-            <div class="label">°C</div>
-            <div id="cVal" class="digit">25</div>
-          </div>
-        </div>
-
-        <label class="label">Set temperature (°F) — numeric control</label>
-        <input id="setF" type="number" step="1" value="100" style="padding:10px 12px;border-radius:12px;border:1px solid var(--border);background:transparent;color:var(--text);max-width:140px" />
-
-        <div class="row" style="margin-top:8px">
-          <button id="runBtn" class="btn primary">RUN</button>
-          <button id="stopBtn" class="btn danger">SAFETY STOP</button>
-        </div>
-      </section>
-
-      <section class="card vstack">
-        <div class="title">Indicators</div>
-        <div class="row" style="align-items:flex-start;gap:24px">
-          <div style="display:flex;gap:16px;align-items:center">
-            <div>
-              <div class="label">Current °F (thermometer)</div>
-              <div class="thermo">
-                <div id="mercury" class="mercury" style="height:0%"></div>
-                <div class="scale"><span>212°F</span><span>122°F</span><span>32°F</span></div>
-              </div>
-            </div>
-            <div>
-              <div class="label">Digital °F</div>
-              <div id="fVal" class="digit">77.0</div>
-              <div class="label" style="margin-top:8px">Setpoint °F</div>
-              <div id="spVal" class="digit">100</div>
-              <div class="leds" style="margin-top:14px">
-                <div id="ledRed" class="led red" aria-label="Red LED"></div>
-                <div id="ledGreen" class="led green" aria-label="Green LED"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="title" style="margin-top:8px">Message</div>
-        <div id="message" class="msg">System is safe</div>
-      </section>
-    </div>
-  </div>
-
-  <script>
-    const cSlider = document.getElementById('cSlider');
-    const cVal = document.getElementById('cVal');
-    const setF = document.getElementById('setF');
-    const spVal = document.getElementById('spVal');
-    const fVal = document.getElementById('fVal');
-    const mercury = document.getElementById('mercury');
-    const ledRed = document.getElementById('ledRed');
-    const ledGreen = document.getElementById('ledGreen');
-    const message = document.getElementById('message');
-    const runBtn = document.getElementById('runBtn');
-    const stopBtn = document.getElementById('stopBtn');
-
-    let timer = null;
-
-    function cToF(c){ return c * 1.8 + 32; }
-
-    function updateDisplays(){
-      const c = Number(cSlider.value);
-      const f = cToF(c);
-      const sp = Number(setF.value);
-
-      cVal.textContent = c.toFixed(0);
-      fVal.textContent = f.toFixed(1);
-      spVal.textContent = sp.toFixed(0);
-
-      const minF = 32, maxF = 212;
-      const clamped = Math.max(minF, Math.min(maxF, f));
-      const pct = ((clamped - minF) / (maxF - minF)) * 100;
-      mercury.style.height = pct + '%';
-
-      const over = f > sp;
-      ledRed.classList.toggle('on', over);
-      ledGreen.classList.toggle('on', !over);
-      message.textContent = over ? 'Please turn OFF the system' : 'System is safe';
-    }
-
-    function startLoop(){
-      if (timer) return;
-      updateDisplays();
-      timer = setInterval(updateDisplays, 200);
-      runBtn.textContent = 'RUNNING…';
-      runBtn.disabled = true;
-    }
-
-    function stopLoop(){
-      if (timer){ clearInterval(timer); timer = null; }
-      ledRed.classList.remove('on');
-      ledGreen.classList.remove('on');
-      message.textContent = 'Stopped';
-      runBtn.textContent = 'RUN';
-      runBtn.disabled = false;
-    }
-
-    cSlider.addEventListener('input', updateDisplays);
-    setF.addEventListener('input', updateDisplays);
-    runBtn.addEventListener('click', startLoop);
-    stopBtn.addEventListener('click', stopLoop);
-
-    updateDisplays();
-  </script>
-</body>
-</html>
+    <p class="muted">Convert <strong>°C → °F</strong>. If <code>°F &gt; Setpoint</code> → <strong>RED LED</strong> &amp; “P
