--- a/index-2.html
+++ b/index-2.html
@@ -6,14 +6,15 @@
   <title>Temperature Safety App</title>
   <meta name="description" content="Convert °C→°F and compare to a setpoint with LEDs and RUN/STOP." />
   <style>
-    :root{--bg:#0b1220;--panel:#0f172a;--text:#e5e7eb;--muted:#94a3b8;--accent:#22c55e;--border:#1f2937;}
-    @media (prefers-color-scheme: light){:root{--bg:#f6f7fb;--panel:#ffffff;--text:#0f172a;--muted:#475569;--accent:#059669;--border:#e5e7eb}}
+    :root{--bg:#f6f7fb;--panel:#ffffff;--text:#0f172a;--muted:#475569;--accent:#059669;--border:#e5e7eb}
+    @media (prefers-color-scheme: dark){:root{--bg:#0b1220;--panel:#0f172a;--text:#e5e7eb;--muted:#94a3b8;--accent:#22c55e;--border:#1f2937}}
     *{box-sizing:border-box}
     html,body{height:100%}
     body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;background:var(--bg);color:var(--text)}
     .wrap{max-width:1000px;margin:32px auto;padding:24px}
-    h1{margin:0 0 6px;font-size:26px}
+    h1{margin:0 0 6px;font-size:28px}
     .muted{color:var(--muted);font-size:14px;margin:0 0 14px}
+
     .grid{display:grid;gap:16px;grid-template-columns:300px 1fr}
     .card{background:var(--panel);border:1px solid var(--border);border-radius:16px;padding:18px}
     .title{font-weight:700}
@@ -22,51 +23,88 @@
     .btn.primary{background:var(--accent);border-color:var(--accent);color:#fff}
     .btn.danger{background:#ef4444;border-color:#ef4444;color:#fff}
     .vstack{display:flex;flex-direction:column;gap:8px}
-    /* vertical slider */
-    .vslider{height:260px;writing-mode: bt-lr;-webkit-appearance: slider-vertical;appearance: slider-vertical;width:40px}
     .digit{font:700 18px ui-monospace, SFMono-Regular, Menlo, monospace}
-    /* thermometer */
+    .label{font-size:12px;color:var(--muted)}
+
+    /* TRUE VERTICAL SLIDER (cross-browser) */
+    .vslider{
+      height:260px;           /* slider length (vertical) */
+      width:40px;             /* track thickness + thumb room */
+      /* Chrome/Edge/Safari */
+      -webkit-appearance: slider-vertical;
+      appearance: slider-vertical;
+      /* Helps some engines align layout vertically */
+      writing-mode: bt-lr;    /* bottom-to-top, left-to-right */
+    }
+    /* Optional: nicer thumbs */
+    .vslider::-webkit-slider-thumb{
+      -webkit-appearance:none; appearance:none;
+      width:24px;height:24px;border-radius:50%;
+      background:var(--accent);border:2px solid #0002;
+      box-shadow:0 2px 6px #0002;
+    }
+    .vslider::-moz-range-thumb{
+      width:24px;height:24px;border-radius:50%;
+      background:var(--accent);border:2px solid #0002;
+      box-shadow:0 2px 6px #0002;
+    }
+
+    /* Thermometer */
     .thermo{position:relative;height:300px;width:80px;border:1px solid var(--border);border-radius:14px;background:linear-gradient(#0ea5e933,#ef444433);display:flex;align-items:flex-end;justify-content:center;margin:auto}
     .mercury{width:60px;border-radius:10px;background:#60a5fa}
     .scale{position:absolute;left:100%;top:0;height:100%;padding-left:10px;color:var(--muted);font-size:12px;display:flex;flex-direction:column;justify-content:space-between}
+
+    /* LEDs */
     .leds{display:flex;gap:14px;align-items:center}
     .led{width:18px;height:18px;border-radius:50%;border:2px solid #0002;box-shadow:0 0 0 2px #0001 inset}
     .led.red{background:#7f1d1d}
     .led.green{background:#064e3b}
     .on.red{background:#ef4444;box-shadow:0 0 12px #ef4444}
     .on.green{background:#22c55e;box-shadow:0 0 12px #22c55e}
+
     .msg{min-height:40px;background:#0000000a;border:1px dashed var(--border);border-radius:12px;padding:10px 12px}
-    .label{font-size:12px;color:var(--muted)}
   </style>
 </head>
 <body>
   <div class="wrap">
     <h1>Temperature Safety App</h1>
-    <p class="muted">Convert <strong>°C → °F</strong>. If <code>°F &gt; Setpoint</code> → <strong>RED LED</strong> &amp; “Please turn OFF the system”. Otherwise → <strong>GREEN LED</strong> &amp; “System is safe”. Use <em>RUN</em> to monitor continuously; <em>SAFETY STOP</em> halts it.</p>
+    <p class="muted">
+      Convert <strong>°C → °F</strong>. If <code>°F &gt; Setpoint</code> → <strong>RED LED</strong> &amp; “Please turn OFF the system”.
+      Otherwise → <strong>GREEN LED</strong> &amp; “System is safe”. Use <em>RUN</em> to monitor continuously; <em>SAFETY STOP</em> halts it.
+    </p>
 
     <div class="grid">
-      <!-- Controls -->
+      <!-- LEFT: Inputs (with TRUE vertical slider) -->
       <section class="card vstack">
         <div class="title">Inputs</div>
+
         <label class="label">Temperature input (°C) — vertical slider with digital display</label>
         <div class="row" style="gap:16px;align-items:flex-end">
-          <input id="cSlider" type="range" min="0" max="100" value="25" class="vslider" />
+          <input id="cSlider" type="range" class="vslider" min="0" max="100" value="25" orient="vertical" />
           <div>
             <div class="label">°C</div>
             <div id="cVal" class="digit">25</div>
           </div>
         </div>
 
-        <label class="label">Set temperature (°F) — numeric control</label>
-        <input id="setF" type="number" step="1" value="100" style="padding:10px 12px;border-radius:12px;border:1px solid var(--border);background:transparent;color:var(--text);max-width:140px" />
+        <label class="label" style="margin-top:6px">Set temperature (°F) — numeric control</label>
+        <input id="setF" type="number" step="1" value="100"
+               style="padding:10px 12px;border-radius:12px;border:1px solid var(--border);background:transparent;color:var(--text);max-width:140px" />
 
         <div class="row" style="margin-top:8px">
           <button id="runBtn" class="btn primary">RUN</button>
           <button id="stopBtn" class="btn danger">SAFETY STOP</button>
         </div>
+
+        <!-- Formula -->
+        <div class="title" style="margin-top:12px">Formula</div>
+        <div class="label">Conversion</div>
+        <div class="digit">°F = °C × 1.8 + 32</div>
+        <div class="label" style="margin-top:6px">With current values</div>
+        <div class="digit" id="formulaExample">77.0 = 25 × 1.8 + 32</div>
       </section>
 
-      <!-- Indicators & status -->
+      <!-- RIGHT: Indicators -->
       <section class="card vstack">
         <div class="title">Indicators</div>
         <div class="row" style="align-items:flex-start;gap:24px">
@@ -100,33 +138,30 @@
   <script>
     // Elements
     const cSlider = document.getElementById('cSlider');
-    const cVal = document.getElementById('cVal');
-    const setF = document.getElementById('setF');
-    const spVal = document.getElementById('spVal');
-    const fVal = document.getElementById('fVal');
+    const cVal    = document.getElementById('cVal');
+    const setF    = document.getElementById('setF');
+    const spVal   = document.getElementById('spVal');
+    const fVal    = document.getElementById('fVal');
     const mercury = document.getElementById('mercury');
-    const ledRed = document.getElementById('ledRed');
-    const ledGreen = document.getElementById('ledGreen');
+    const ledRed  = document.getElementById('ledRed');
+    const ledGreen= document.getElementById('ledGreen');
     const message = document.getElementById('message');
-    const runBtn = document.getElementById('runBtn');
+    const runBtn  = document.getElementById('runBtn');
     const stopBtn = document.getElementById('stopBtn');
+    const formulaExample = document.getElementById('formulaExample');
 
     let timer = null;
-
-    // °C → °F
     const cToF = (c) => c * 1.8 + 32;
 
-    // Update all indicators
     function updateDisplays(){
-      const c = Number(cSlider.value);
-      const f = cToF(c);
+      const c  = Number(cSlider.value);
+      const f  = cToF(c);
       const sp = Number(setF.value);
 
       // digits
       cVal.textContent = c.toFixed(0);
-      fVal.textContent = f.toFixed(1);
-      // show setpoint if that element exists (it does)
-      if (spVal) spVal.textContent = sp.toFixed(0);
+      document.getElementById('fVal').textContent = f.toFixed(1);
+      document.getElementById('spVal').textContent = sp.toFixed(0);
 
       // thermometer (clamped 32–212°F)
       const minF = 32, maxF = 212;
@@ -139,13 +174,15 @@
       ledRed.classList.toggle('on', over);
       ledGreen.classList.toggle('on', !over);
       message.textContent = over ? 'Please turn OFF the system' : 'System is safe';
+
+      // show worked formula
+      formulaExample.textContent = `${f.toFixed(1)} = ${c.toFixed(0)} × 1.8 + 32`;
     }
 
-    // Loop controls
     function startLoop(){
-      if (timer) return;            // already running
+      if (timer) return;
       updateDisplays();
-      timer = setInterval(updateDisplays, 200); // ~while loop
+      timer = setInterval(updateDisplays, 200);
       runBtn.textContent = 'RUNNING…';
       runBtn.disabled = true;
     }
@@ -165,6 +202,13 @@
     stopBtn.addEventListener('click', stopLoop);
 
     // First paint
+    // Create missing indicator elements used above (if not in DOM already)
+    if(!document.getElementById('fVal')) {
+      const f = document.createElement('div'); f.id='fVal'; f.className='digit'; f.textContent='0.0';
+    }
+    if(!document.getElementById('spVal')) {
+      const s = document.createElement('div'); s.id='spVal'; s.className='digit'; s.textContent='0';
+    }
     updateDisplays();
   </script>
 </body>
