Refactor temperature app layout and functionality

--- a/index-2.html
+++ b/index-2.html
@@ -18,7 +18,7 @@
     .grid{display:grid;gap:16px;grid-template-columns:300px 1fr}
     .card{background:var(--panel);border:1px solid var(--border);border-radius:16px;padding:18px}
     .title{font-weight:700}
-    .row{display:flex;gap:10px;align-items:center;flex-wrap:wrap}
+    .row{display:flex;gap:16px;align-items:center;flex-wrap:wrap}
     .btn{border:1px solid var(--border);background:#11182710;color:var(--text);padding:10px 14px;border-radius:12px;cursor:pointer}
     .btn.primary{background:var(--accent);border-color:var(--accent);color:#fff}
     .btn.danger{background:#ef4444;border-color:#ef4444;color:#fff}
@@ -26,33 +26,29 @@
     .digit{font:700 18px ui-monospace, SFMono-Regular, Menlo, monospace}
     .label{font-size:12px;color:var(--muted)}
 
-    /* TRUE VERTICAL SLIDER (cross-browser) */
+    /* TRUE VERTICAL SLIDER */
     .vslider{
-      height:260px;           /* slider length (vertical) */
-      width:40px;             /* track thickness + thumb room */
-      /* Chrome/Edge/Safari */
-      -webkit-appearance: slider-vertical;
-      appearance: slider-vertical;
-      /* Helps some engines align layout vertically */
-      writing-mode: bt-lr;    /* bottom-to-top, left-to-right */
+      height:260px; width:40px;
+      -webkit-appearance: slider-vertical; appearance: slider-vertical;
+      writing-mode: bt-lr;
     }
-    /* Optional: nicer thumbs */
     .vslider::-webkit-slider-thumb{
       -webkit-appearance:none; appearance:none;
       width:24px;height:24px;border-radius:50%;
-      background:var(--accent);border:2px solid #0002;
-      box-shadow:0 2px 6px #0002;
+      background:var(--accent);border:2px solid #0002; box-shadow:0 2px 6px #0002;
     }
     .vslider::-moz-range-thumb{
       width:24px;height:24px;border-radius:50%;
-      background:var(--accent);border:2px solid #0002;
-      box-shadow:0 2px 6px #0002;
+      background:var(--accent);border:2px solid #0002; box-shadow:0 2px 6px #0002;
     }
 
     /* Thermometer */
-    .thermo{position:relative;height:300px;width:80px;border:1px solid var(--border);border-radius:14px;background:linear-gradient(#0ea5e933,#ef444433);display:flex;align-items:flex-end;justify-content:center;margin:auto}
+    .thermo{position:relative;height:300px;width:80px;border:1px solid var(--border);
+      border-radius:14px;background:linear-gradient(#0ea5e933,#ef444433);
+      display:flex;align-items:flex-end;justify-content:center;margin:auto}
     .mercury{width:60px;border-radius:10px;background:#60a5fa}
-    .scale{position:absolute;left:100%;top:0;height:100%;padding-left:10px;color:var(--muted);font-size:12px;display:flex;flex-direction:column;justify-content:space-between}
+    .scale{position:absolute;left:100%;top:0;height:100%;padding-left:10px;color:var(--muted);
+      font-size:12px;display:flex;flex-direction:column;justify-content:space-between}
 
     /* LEDs */
     .leds{display:flex;gap:14px;align-items:center}
@@ -69,18 +65,28 @@
   <div class="wrap">
     <h1>Temperature Safety App</h1>
     <p class="muted">
-      Convert <strong>°C → °F</strong>. If <code>°F &gt; Setpoint</code> → <strong>RED LED</strong> &amp; “Please turn OFF the system”.
-      Otherwise → <strong>GREEN LED</strong> &amp; “System is safe”. Use <em>RUN</em> to monitor continuously; <em>SAFETY STOP</em> halts it.
+      Convert <strong>°C → °F</strong>. If <code>°F &gt; Setpoint</code> → <strong>RED LED</strong> & “Please turn OFF the system”.
+      Otherwise → <strong>GREEN LED</strong> & “System is safe”. Use <em>RUN</em> to monitor continuously; <em>SAFETY STOP</em> halts it.
     </p>
 
     <div class="grid">
-      <!-- LEFT: Inputs (with TRUE vertical slider) -->
+      <!-- LEFT: Inputs + LEFT INDICATOR (mirrors the right thermometer) -->
       <section class="card vstack">
         <div class="title">Inputs</div>
 
         <label class="label">Temperature input (°C) — vertical slider with digital display</label>
-        <div class="row" style="gap:16px;align-items:flex-end">
+        <div class="row" style="align-items:flex-end">
           <input id="cSlider" type="range" class="vslider" min="0" max="100" value="25" orient="vertical" />
+
+          <!-- NEW: Left thermometer indicator (synced) -->
+          <div>
+            <div class="label">Left indicator (°F)</div>
+            <div class="thermo" style="height:260px">
+              <div id="leftMercury" class="mercury" style="height:0%"></div>
+              <div class="scale" style="font-size:11px"><span>212°F</span><span>122°F</span><span>32°F</span></div>
+            </div>
+          </div>
+
           <div>
             <div class="label">°C</div>
             <div id="cVal" class="digit">25</div>
@@ -140,9 +146,10 @@
     const cSlider = document.getElementById('cSlider');
     const cVal    = document.getElementById('cVal');
     const setF    = document.getElementById('setF');
-    const spVal   = document.getElementById('spVal');
     const fVal    = document.getElementById('fVal');
+    const spVal   = document.getElementById('spVal');
     const mercury = document.getElementById('mercury');
+    const leftMercury = document.getElementById('leftMercury'); // NEW (left)
     const ledRed  = document.getElementById('ledRed');
     const ledGreen= document.getElementById('ledGreen');
     const message = document.getElementById('message');
@@ -153,6 +160,11 @@
     let timer = null;
     const cToF = (c) => c * 1.8 + 32;
 
+    function setThermo(heightPct){
+      mercury.style.height = heightPct + '%';
+      leftMercury.style.height = heightPct + '%'; // sync left indicator
+    }
+
     function updateDisplays(){
       const c  = Number(cSlider.value);
       const f  = cToF(c);
@@ -160,14 +172,14 @@
 
       // digits
       cVal.textContent = c.toFixed(0);
-      document.getElementById('fVal').textContent = f.toFixed(1);
-      document.getElementById('spVal').textContent = sp.toFixed(0);
+      fVal.textContent = f.toFixed(1);
+      spVal.textContent = sp.toFixed(0);
 
       // thermometer (clamped 32–212°F)
       const minF = 32, maxF = 212;
       const clamped = Math.max(minF, Math.min(maxF, f));
       const pct = ((clamped - minF) / (maxF - minF)) * 100;
-      mercury.style.height = pct + '%';
+      setThermo(pct);
 
       // decision
       const over = f > sp;
@@ -175,7 +187,7 @@
       ledGreen.classList.toggle('on', !over);
       message.textContent = over ? 'Please turn OFF the system' : 'System is safe';
 
-      // show worked formula
+      // worked formula
       formulaExample.textContent = `${f.toFixed(1)} = ${c.toFixed(0)} × 1.8 + 32`;
     }
 
@@ -195,20 +207,11 @@
       runBtn.disabled = false;
     }
 
-    // Events
     cSlider.addEventListener('input', updateDisplays);
     setF.addEventListener('input', updateDisplays);
     runBtn.addEventListener('click', startLoop);
     stopBtn.addEventListener('click', stopLoop);
 
-    // First paint
-    // Create missing indicator elements used above (if not in DOM already)
-    if(!document.getElementById('fVal')) {
-      const f = document.createElement('div'); f.id='fVal'; f.className='digit'; f.textContent='0.0';
-    }
-    if(!document.getElementById('spVal')) {
-      const s = document.createElement('div'); s.id='spVal'; s.className='digit'; s.textContent='0';
-    }
     updateDisplays();
   </script>
 </body>
